# dbrx-sessionizer

./: .gitignore  LICENSE  README.md  pyproject.toml
dbrx_sesh/: __init__.py  session.py
dbrx_sesh/cli/: generator.py
dbrxish/: execution.py  session.py
dbrxish/cli/: main.py
examples/: default-profile-auth.py  local-workspace-auth-with-exec-kernel.py  outline-SCRATCH.py  simple.py  spark-session-configs.py  sql_editor.py  use-auth-profile-locally-only.py  use-local-profile.py  using-databrickscfg-authentication.py  using-token-authentication.py  using-token-host-authentication.py
